# before-we-ai

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SIMPLE-README.md  pyproject.toml
before_we_ai/: __init__.py  scan.py
before_we_ai/engine/: runner.py
before_we_ai/model/: __init__.py  enums.py  objects.py  scheduler.py  semantics.py  transitions.py
before_we_ai/probes/: library.py  verdicts.py
before_we_ai/profile/: __init__.py  candidates.py  columns.py
before_we_ai/sources/: __init__.py  attach.py  canonical.py  excel.py
before_we_ai/store/: integrity.py  layout.py  repository.py
claim_viewer/: __init__.py  __main__.py  requirements.md  viewer.py
corpus/: README.md
corpus/data/: buchungen_report.csv  expected_verdicts.yaml  kontakte_aussendienst.xlsx
corpus/generator_spec/: agent_task.md  generator_contract.md  trap_classes.yaml
corpus/validation/: build_html_report.py  check_invariants.py  check_trap_classes.py  corpus-validation-report.html  corpus-validation-report.md  recompute_reference_results.py  report.py
docs/: SIMPLE-README.md  architecture.md  claim-viewer.md  corpus.md  onboarding-workflow.md  requirements.md  seeded-recall-m4.md
docs/spec/: before-we-ai-fixture-korpus-spezifikation.md  before-we-ai-konzept-zusammenfassung.md  before-we-ai-systemarchitektur.md  before-we-ai-testdatensatz-finance-anforderungen.md
meta/: conventions.md  dev-container-cheatsheet.md  memory.md  project-setup.md
raw-training-data/data/: buchungen_report.csv  (+2 more)
scripts/: copy_raw_data.sh
src/: pyproject.toml
validation/: README.md
(+108 files in other folders)
