[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "before-we-ai"
version = "0.1.0"
description = "Evidence-based context discovery — claims with epistemic status, never a silent wrong answer"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "python-ulid>=2.2",
    "duckdb>=1.0",
    "openpyxl>=3.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = [
    "before_we_ai",
    "before_we_ai.model",
    "before_we_ai.store",
    "before_we_ai.sources",
    "before_we_ai.profile",
    "before_we_ai.probes",
    "before_we_ai.engine",
    "claim_viewer",
]

[tool.setuptools.package-data]
"before_we_ai.probes" = ["templates/*.sql.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
